added profile update without document

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,15 @@
-PORT=123
-SECRET_KEY=secret
-SALT_ROUNDS=1234
+# server
+PORT=PORT
+
+# jwt
+SECRET_KEY=SECRET_KEY
+TOKEN_EXPIRATION=TOKEN_EXPIRATION
+
+# bcrypt
+SALT_ROUNDS=SALT_ROUNDS
+
+# cloudinary
+CLOUD_NAME=CLOUD_NAME
+API_KEY=API_KEY
+API_SECRET=API_SECRET
+SECURE=SECURE
