--- a/.example.env
+++ b/.example.env
@@ -10,3 +10,6 @@ TOKEN_EXPIRATION=YOUR_TOKEN_EXPIRED
 
 # ========== BCRYPT ========== #
 SALT_ROUNDS=YOUR_SALT_ROUNDS
+
+# ========== DB ========== #
+DB_PASSWORD=YOU_DB_PASSWORD
